@startuml blockchain_classes
skinparam classAttributeIconSize 0

class Block {
  #balance: float
  #hash: String
}

class GenesisBlock {
  -ownerName: String
  -creationTime: Time
}

Block <|-- GenesisBlock


class Client {
  -name: String
  -balance: float
  -deposit(amount: float)
  -withdraw(amount: float)
}

class Server {
  -deposit(amount: float)
  -withdraw(amount: float)
  -calculateHash(block: Block): String
' A validação só é feita pelo servidor
  -validateWithdrawal(amount: float, ownerName: float)
}

' BlockChain
Server *--> "many" Block

' O Server tem um atributo que mapeia por string os clientes map(String) = Cliente
Server "1"--"many" Client 
@enduml